# finance-tracker

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
finance_tracker/: analyse.py  categories.py  cli.py  database.py  ingest.py  models.py  rules.py  seeds.py  visualise.py
src/finance_tracker/: ingest.py
tests/: conftest.py  test_analyse.py  test_database.py  test_ingest.py  test_rules.py  test_seeds.py
