[project]
name = "finance-tracker"
version = "0.1.0"
description = "Personal finance tracker — transaction categorisation, spending analysis and budgeting"
authors = [
    {name = "Jamie McMillan",email = "jamie.mcmillan9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.9",
    "typer>=0.15",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.poetry]
packages = [{include = "finance_tracker", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
