[project]
name = "finance-tracker"
version = "0.1.0"
description = "Personal finance tracker — transaction categorisation, spending analysis and budgeting"
authors = [
    {name = "Jamie McMillan", email = "jamie.mcmillan9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.9",
    "typer>=0.15",
    "rich>=13.0",
    "sqlmodel>=0.0.22",
]


[project.scripts]
finance = "finance_tracker.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "ruff>=0.13",
    "bandit>=1.8",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["finance_tracker"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"finance_tracker/cli.py" = ["B008"]

[tool.ty.environment]
python = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finance_tracker"]
